--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -47,3 +47,10 @@
     }
 
 }
+
+.slick-slider{
+    -webkit-user-select: auto;
+    -moz-user-select: auto;
+    -ms-user-select: auto;
+    user-select: auto;
+  }
